--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,10 +1,10 @@
-@import '~@/styles/mixin.scss';
+@import "~@/styles/mixin.scss";
 
 .home {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, minmax(200px, 1fr));
-  grid-template-rows: 50px auto;
+  grid-template-rows: 50px auto
 }
 
 .nav {
@@ -26,5 +26,5 @@
   grid-column: 2 / 6;
   height: 100%;
   width: 100%;
-  @include flexLayout(center, center)
+  @include flexLayout(center, center);
 }
