--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,34 @@ body,
 }
 
 /* app 下第一个默认高度 */
-:global(#app > *){
+:global(#app > *) {
   max-height: 100%;
   height: 100%;
+}
+
+/*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: #fff;
+}
+/*定义滚动条的轨道，内阴影及圆角*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+}
+/*定义滑块，内阴影及圆角*/
+::-webkit-scrollbar-thumb {
+  height: 5px;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #468ffc;
+  &:hover {
+    background-color: #f0f0f0 !important;
+  }
+}
+*:hover::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
 }
