--- a/src/view/Home/home.module.scss
+++ b/src/view/Home/home.module.scss
@@ -2,29 +2,31 @@
 
 .home {
   height: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, minmax(200px, 1fr));
-  grid-template-rows: 50px auto
+  display: flex;
+  flex-wrap: wrap;
 }
 
+$navHeight: 50px;
 .nav {
-  grid-column: 1 / 6;
-  height: 50px;
-  width: 100%;
+  height: $navHeight;
+  flex-basis: 100%;
   @include flexLayout(center, center);
   border-bottom: 1px solid;
 }
-
-.sidebar {
-  height: 100%;
+@mixin commonHeight {
+  height: calc(100vh - #{$navHeight});
+  max-height: calc(100vh - #{$navHeight});
   width: 100%;
-  @include flexLayout(center, center);
-  border-right: 1px solid;
+  overflow: auto;
+  box-sizing: border-box;
+}
+.sidebar {
+  flex-basis: 250px;
+  @include commonHeight;
+  overflow-x: hidden;
 }
 
 .main {
-  grid-column: 2 / 6;
-  height: 100%;
-  width: 100%;
-  @include flexLayout(center, center);
+  flex: 1;
+  @include commonHeight;
 }
